fix .tile-collapse does not work with animated slide-in effect issue

--- a/css/base.css
+++ b/css/base.css
@@ -10394,6 +10394,12 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   margin-right: -15px;
   margin-left: -15px;
 }
+.tile-wrap-animation .tile-collapse {
+  -webkit-transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s linear;
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1), margin 0.15s linear;
+  -webkit-transition-property: margin, opacity, -webkit-transform;
+  transition-property: margin, opacity, transform;
+}
 
 @media only screen and (min-width: 1056px) and (max-width: 1439px) {
   .tile-collapse-full.active {
